Update 04 - modelo con preprocesado de otra forma y Random Forest.ipynb

--- a/04 - modelo con preprocesado de otra forma y Random Forest.ipynb
+++ b/04 - modelo con preprocesado de otra forma y Random Forest.ipynb
@@ -10,7 +10,7 @@
     "- Sergio Andres Daza\n",
     "- Antonia Yepes Quintero\n",
     "\n",
-    "Este notebook implementa un modelo Random Forest utilizando un preprocesado alternativo al utilizado en el modelo SVM."
+    "Este notebook implementa un modelo Random Forest utilizando un preprocesado alternativo al utilizado en el modelo Random Forest."
    ]
   },
   {
