Update 99 - modelo solución.ipynb

--- a/99 - modelo solución.ipynb
+++ b/99 - modelo solución.ipynb
@@ -10,7 +10,7 @@
     "- Sergio Andres Daza\n",
     "- Antonia Yepes Quintero\n",
     "\n",
-    "Este notebook implementa un modelo Random Forest utilizando un preprocesado alternativo al utilizado en el modelo SVM. Random Forest es especialmente apropiado para este dataset porque:\n",
+    "Este notebook implementa un modelo Random Forest utilizado para la solucion de Kaggle:\n",
     "- Maneja bien variables categóricas sin normalización\n",
     "- Es robusto ante outliers y valores atípicos\n",
     "- Proporciona importancia de características naturalmente\n",
